dom/u2f/U2F.h
@@ -170,6 +170,7 @@ class U2FStatus
 {
 public:
   U2FStatus();
+  U2FStatus(const U2FStatus&) = delete;
 
   void WaitGroupAdd();
   void WaitGroupDone();
